--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "node": "hardhat node",
+    "deploy:local": "hardhat ignition deploy ./ignition/modules/ProfileNFT.ts --network localhost",
+    "compile": "hardhat compile",
+    "send": "hardhat run scripts/send.js --network localhost"
   },
   "repository": {
     "type": "git",
@@ -21,5 +25,11 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "hardhat": "^2.22.19"
+  },
+  "dependencies": {
+    "@openzeppelin/contracts": "^5.4.0",
+    "@talisman-connect/components": "^1.1.1",
+    "@talisman-connect/wallets": "^1.1.3",
+    "dotenv": "^17.2.3"
   }
 }
