--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
-  "buildCommand": "cd client && npm install && npm run build",
-  "outputDirectory": "client/dist",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
   "framework": "vite",
-  "installCommand": "cd client && npm install",
+  "installCommand": "npm install",
+  "rootDirectory": "client",
   "rewrites": [
     {
       "source": "/(.*)",
