--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "@supabase/supabase-js": "^2.80.0",
     "@talismn/connect-wallets": "^1.2.8",
     "@tanstack/react-query": "^5.90.7",
+    "@tanstack/react-query-devtools": "^5.90.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
