--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ client/node_modules/
 .env.development.local
 .env.test.local
 .env.production.local
-
+newdesing
 # Build outputs
 client/dist/
 client/build/
