--- a/contracts/package.json
+++ b/contracts/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test",
+    "test:profile": "hardhat test test/ProfileNFT.test.ts",
+    "test:reputation": "hardhat test test/ReputationCard.test.ts",
+    "test:access": "hardhat test test/AccessControl.test.ts",
+    "test:soulbound": "hardhat test test/Soulbound.test.ts"
   },
   "keywords": [],
   "author": "",
