--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
     "ethers": "^6.15.0",
+    "lucide-react": "^0.553.0",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
