feat(kilt): Implement KILT Protocol integration with error handling and credential management
- Added KILT error utilities for structured error handling.
- Created core KILT service for managing connections, DIDs, and credentials.
- Introduced functions for creating and resolving light DIDs.
- Implemented credential management functions including creation, retrieval, and updates.
- Enhanced PublicClaimPage to check for duplicate claims and update pending credentials.
- Updated UserDashboard to fetch and display verified credentials linked to user DIDs.
- Added new SQL migrations for KILT-related tables and columns in the Supabase database.
- Created claim_links table for managing shareable claim links.
- Fixed credential card_id mismatches with a dedicated SQL script.

--- a/client/.env.example
+++ b/client/.env.example
@@ -10,3 +10,10 @@ VITE_SUPABASE_ANON_KEY=your-anon-key-here
 
 VITE_PINATA_API_KEY=your-pinata-api-key
 VITE_PINATA_SECRET_KEY=your-pinata-secret-key
+
+# KILT Protocol Configuration
+# Network: 'peregrine' for testnet, 'spiritnet' for mainnet
+VITE_KILT_NETWORK=peregrine
+VITE_KILT_WSS_ADDRESS=wss://peregrine.kilt.io
+VITE_KILT_ENABLED=true
+VITE_KILT_MODE=hybrid
