--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,13 @@
     "canvas-confetti": "^1.9.4",
     "ethers": "^6.15.0",
     "lucide-react": "^0.553.0",
+    "motion": "^12.23.24",
     "qrcode": "^1.5.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.6",
+    "three": "^0.181.1",
     "viem": "^2.39.0",
     "wagmi": "^1.4.13"
   },
