--- a/client/.env.example
+++ b/client/.env.example
@@ -1,4 +1,7 @@
-# Supabase Configuration
+VITE_WALLETCONNECT_PROJECT_ID=your_walletconnect_cloud_project_id_here
+VITE_RPC_URL=
+
+# Rename this file to .env and fill values. Missing project id disables WalletConnect.# Supabase Configuration
 # Get these values from your Supabase project dashboard:
 # Settings → API → Project URL and anon/public key
 
