--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,8 @@
     "react-router-dom": "^7.9.6",
     "three": "^0.181.1",
     "viem": "^2.39.0",
-    "wagmi": "^1.4.13"
+    "wagmi": "^2.12.18",
+    "@web3modal/wagmi": "^5.1.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
