--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-query": "^5.90.9",
     "@tanstack/react-query-devtools": "^5.90.2",
     "@types/qrcode": "^1.5.6",
+    "@web3modal/wagmi": "^5.1.11",
     "axios": "^1.13.2",
     "canvas-confetti": "^1.9.4",
     "ethers": "^6.15.0",
@@ -30,8 +31,7 @@
     "react-router-dom": "^7.9.6",
     "three": "^0.181.1",
     "viem": "^2.39.0",
-    "wagmi": "^2.12.18",
-    "@web3modal/wagmi": "^5.1.11"
+    "wagmi": "^2.12.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
@@ -49,6 +49,7 @@
     "postcss": "^8.5.6",
     "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "^4.1.17",
+    "terser": "^5.44.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^7.2.2"
